assets/stylesheets/common/common.scss
/* ... */
.chat-channel-title {
  position: relative;
  display: grid;
  grid-template-columns: 20px 1fr;
  grid-column-gap: 0.75em;
  align-items: center;
  font-weight: 500;
  max-width: calc(100% - 10px - 0.75em);
  cursor: pointer;
  margin: 0.6rem 0;

  .category-chat-private .d-icon {
    background-color: var(--secondary);
    position: absolute;
    border-radius: 5px;
    padding: 2px 2px 3px;
    color: var(--primary-high);
    height: 0.5em;
    width: 0.5em;
    left: calc(0.6125em + 3px);
    top: -4px;
  }

  .chat-name,
  .category-chat-name,
  .topic-chat-name,
  .tag-chat-name,
  .dm-usernames {
    @include ellipsis;
    color: var(--primary-high);
    font-size: var(--font-0);
    margin: 0;

    .emoji {
      height: 1.2em;
      vertical-align: text-bottom;
      width: 1.2em;
    }
  }

  .d-icon-lock {
    margin-right: 0.25em;
  }

  .badge-category {
    font-size: var(--font-up-1);
  }

  .topic-chat-icon {
    color: var(--primary-medium);
    width: 100%;
    display: flex;
  }

  .tc-avatar {
    display: flex;
  }

  .tc-avatar-container {
    display: inline-flex;
    width: 100%;
    height: auto;
  }

  .dm-multi-count {
    display: inline-block;
    border-radius: 3px;
    background: rgba(var(--primary-rgb), 0.1);
    text-align: center;
    font-weight: bold;
    font-size: var(--font-down-1);
    margin-right: 0.5em;
    line-height: 20px;
    width: 100%;
  }
}

// Styles to make channel list in sidebar match sidebar theme
.sidebar-container {
  .tc-channels {
    color: var(--primary);
    font-size: var(--font-down-1);
    padding-bottom: 2em;
    width: 100%;
    overflow-x: hidden;

    .chat-channel-divider {
      padding: 0 1.75rem;

      &:hover {
        .title-caret {
          opacity: 1;
        }
      }
    }

    .chat-channels-container {
      margin-bottom: 1rem;
    }

    .public-channel-empty-message {
      margin: 0;
      padding: 0em 2em 0.5em;
    }

    .category-chat-private {
      .d-icon {
        background-color: var(--primary-very-low);
      }
    }

    .new-dm,
    .edit-channel-membership-btn,
    .edit-channels-dropdown .select-kit-header,
    .leave-channel-btn {
      display: flex;
      padding: 0.25em;
      border-radius: 0.25em;

      &:hover {
        background-color: var(--tertiary-low);
      }
      .d-icon {
        color: var(--primary-medium);
        font-size: var(--font-down-1);
        padding: 0.25em;
      }
    }

    .leave-channel-btn:hover {
      background-color: var(--tertiary-medium);
    }

    .chat-channel-row {
      &:hover {
        background-color: var(--tertiary-low);
      }
      .chat-channel-title {
        font-weight: unset;
        margin: 0;
      }
    }

    .public-channels .chat-channel-row {
      padding: 0.5rem 1.8rem;
    }
    .direct-message-channels .chat-channel-row {
      padding: 0.3rem 1.8rem;
    }
  }
}

.chat-composer-uploads-container {
  display: flex;
  padding: 0.5em 0.5em 0 0.5em;
  white-space: nowrap;
  overflow-x: auto;

  .chat-upload {
    display: inline-flex;
    height: 50px;
    padding: 0.5em 0.75em;
    border: 1px solid var(--primary-low);
    border-radius: 6px;
    margin-right: 0.5em;

    .preview {
      width: 50px;
      height: 100%;
      display: flex;
      align-items: center;
      justify-content: center;
      margin: 0 1em 0 0;
      border-radius: 8px;

      .d-icon {
        font-size: 3.2rem;
      }

      .preview-img {
        max-width: 100%;
        max-height: 100%;
      }
    }

    .data {
      display: flex;
      flex-direction: column;
      justify-content: center;
      line-height: 1.5em;
      font-size: var(--font-down-1);
      color: var(--primary-high);

      .top-data,
      .bottom-data {
        display: flex;
        align-items: center;
      }

      .file-name {
        display: inline-block;
        max-width: 150px;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        margin-right: 0.5em;
      }

      .uploading {
        font-size: var(--font-down-2);
        margin-right: 0.75em;
      }

      .upload-progress {
        width: 110px;
      }

      .extension-pill {
        background: var(--primary-low);
        border-radius: 5px;
        font-size: var(--font-down-2-rem);
        padding: 0.1em 0.4em;
      }
    }
  }
}

.chat-browse {
  .category-chat-name,
  .topic-chat-name {
    color: var(--primary);
    font-size: var(--font-up-1);
  }
  .category-channels {
    .btn-container {
      align-self: end;
      .btn {
        margin-left: 0;
        margin-right: 0.5em;
      }
    }
  }
  .topic-channels {
    margin-top: 1em;
  }
}

.category-channels {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 1em;
  @media screen and (max-width: 1100px) {
    grid-template-columns: 1fr 1fr;
  }
  .category-chat-channel {
    padding: 1em;
    grid-template-rows: auto auto;
    grid-template-columns: 1fr;
    grid-gap: 1em;
    background: var(--secondary);
    border: 2px solid var(--primary-low);
    border-left: transparent;
    .chat-channel-row-controls {
      right: unset;
      top: calc(100% - 10px);
    }
  }
}
/* ... */

